--- a/rs/templates/user_main_helpers/navigation_buttons.html
+++ b/rs/templates/user_main_helpers/navigation_buttons.html
@@ -27,9 +27,10 @@
 -->
 
         
-<ul id="nav">
+<ul id="rs-nav">
     {% if text_override_for_navigation_bar %}
-        <li class="top"><a href="#nogo1" class="top_link"><span>{{ text_override_for_navigation_bar }}</span></a></li>
+        <li class="top">
+            <span class="no_link">{{ text_override_for_navigation_bar }}</span></li>
     {% else %}
         {% if guest_user_data_fields.registered_user_bool %}
             <li class="top">
@@ -74,7 +75,11 @@
 
                 <li class="top">
                     <a href="{% url generate_contacts_display owner_uid=primary_user_presentation_data_fields.owner_uid %}"
-                    class="top_link"><span>{% trans "Contacts" %} {{ primary_user_presentation_data_fields.new_contact_count }} {% trans "new" %}]</span></a>
+                    class="top_link"><span>{% trans "Contacts" %}
+                        {% if primary_user_presentation_data_fields.new_contact_count %}
+                        [{{ primary_user_presentation_data_fields.new_contact_count }} {% trans "new" %}]
+                        {% endif %}
+                    </span></a>
             {% else %}
                 <li class="top">
                     <a href="{% url generate_contacts_display owner_uid=primary_user_presentation_data_fields.owner_uid %}"
@@ -87,7 +92,8 @@
     
         {% else %}
 
-            <li class="top"><span>{% trans "You have entered in" %} {{ app_name }} {% trans "with a guest account" %}</span></li>
+            <li class="top">
+                <span class="no_link">{% trans "You have entered in" %} {{ app_name }} {% trans "with a guest account" %}</span></li>
 
         {% endif %}
     {% endif %}
