Fixed building of time-stamped releases to include the new dropdown menu css and images.

--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -39,7 +39,7 @@
 
     {% if proprietary_static_dir_exists %}
         <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/proprietary_common.css">
-        <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/dropdown-menu/dropdown_menu.css">
+        <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/dropdown_menu.css">
         <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/{{ build_name }}_common.css">
 
 
