Removed redundant jquery-ui css files - we now use the same jquery-ui css for all builds. We can reverse this decision at some point in the future if the userbase justifys the maintenence efforts

--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/reset.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/text.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/960.css">
-    <link rel="stylesheet" href="/{{ live_static_dir }}/css/jquery-ui/jquery-ui-1.9.2.{{ build_name }}.css">
+    <link rel="stylesheet" href="/{{ live_static_dir }}/css/jquery-ui/jquery-ui-1.9.2.custom.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/chatbox.css">
 
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/site_common.css">
