Added a new class to float menubar items to the right.

--- a/rs/templates/user_main_helpers/navigation_buttons.html
+++ b/rs/templates/user_main_helpers/navigation_buttons.html
@@ -112,7 +112,7 @@
                 </ul>
             </li>
 
-            <li class="top">
+            <li class="top-right">
                 <a href="{% url views.logout %}"
                 rel="address:{% url views.logout %}"
                 class="top_link"><span>{% trans "Exit" %}</span></a>
