--- a/rs/templates/user_main_helpers/test_vip_benefits_dialog.html
+++ b/rs/templates/user_main_helpers/test_vip_benefits_dialog.html
@@ -1,32 +1,50 @@
 {% load i18n %}
 
 <!-- this dialog box handler is appended as if it were another advertising unit -->
-
 <div id="id-show_online_status_dialog_box" style="display:none;">
-    {% blocktrans with app_name as app_name %}
-    <p>As a non-VIP (free) member of {{ app_name }}, you are allowed to see other members online status for {{ minutes }} minutes per day.
-    <p>If you would like to use your free {{ minutes }} minute quota now, please press the button below. If you prefer to wait until later,
-    just close this dialog box.
-    </p>
-    {% endblocktrans %}
+    <div id ="id-show_online_status_dialog_box-first_part">
+        <p>
+        {% blocktrans with app_name as app_name and SHOW_ONLINE_STATUS_TRIAL_TIMEOUT_MINUTES as minutes and BLOCK_ONLINE_STATUS_TRIAL_RESET_HOURS as reset  %}
+        As a non-VIP (free) member of {{ app_name }}, you are allowed to see other members online status for {{ minutes }} minutes every {{ reset }} hours.
+        {% endblocktrans %}
+        </p>
+
+        <p>
+        {% blocktrans with SHOW_ONLINE_STATUS_TRIAL_TIMEOUT_MINUTES as minutes %}
+        If you would like to use your free {{ minutes }} minute quota now, please press the button below. If you prefer to wait until later,
+        just close this dialog box.
+        {% endblocktrans %}
+        </p>
+
+        <p>
+        <input id="id-show_online_status_button" type="submit" name="submit" value="{% trans 'Show online status' %}">
+        </p>
+        
+    </div>
 
     <p>
-    <input id="id-show_online_status_button" type="submit" name="submit" value="{% trans 'Show online status' %}">
-    </p>
-
     {% blocktrans %}
-    <p>VIP members are always shown the online status of other members. You can purchase VIP status by clicking on the button below.
+    VIP members are always shown the online status of other members. You can purchase VIP status by clicking on the button below.
     {% endblocktrans %}
+    </p>
     
     {{ paypal_button }}
     
 </div>
 
 <div id="id-show_online_status_dialog_title" style="display:none;">
-View online status
+{% trans "View online status" %}
+</div>
+
+<div id ="id-show_online_status_dialog_blocked_message"  style="display:none;">
+    <p>
+    {% blocktrans with SHOW_ONLINE_STATUS_TRIAL_TIMEOUT_MINUTES as minutes %}
+    You have already used your free {{ minutes }} minute trial. Time to wait before your next trial:
+    {% endblocktrans %}
+    </p>
+
 </div>
         
-
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -43,7 +61,32 @@ $(document).ready(function() {
 		return false;
 	});
 
+
     $('#id-show_online_status_button').button();
+    $('#id-show_online_status_button').click(function(){
+        $.ajax({
+            type: 'post',
+            url:  '/rs/ajax/set_show_online_status_trial/' + rnd() + "/",
+            success: function(status) {
+                // only process this json response if we are not currently processing a send_message call.
+                if (status == "OK") {
+                    window.location.reload();
+                } else {
+                    // the status will be the amount of time that the user must wait before receiving a new "view online status" trial
+
+                    //replace the button with a message telling them how long they have to wait for their next trial.
+                    $("#id-show_online_status_dialog_box-first_part").html(
+                            $("#id-show_online_status_dialog_blocked_message").html() + "<p>" + status + "</p>"
+                    )
+                }
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+                report_ajax_error(textStatus, errorThrown, "initialize_main_and_group_boxes_on_server");
+            },
+            complete: function() {
+            }
+        });
+    })
 
 });
 </script>
