--- a/rs/templates/user_main_helpers/chat.html
+++ b/rs/templates/user_main_helpers/chat.html
@@ -67,21 +67,21 @@
 </div>
 
 <div id="id-chat-contact-title-user_presence_active-text" style="display:none;">
-    {% trans "(Active)" %}
+    <img src="/{{ live_static_dir }}/img/1-green_dot_10px_10px.png" align="middle" > {% trans "(Active)" %}
 </div>
 <div id="id-chat-contact-title-user_presence_active-image" style="display:none;">
     <img src="/{{ live_static_dir }}/img/1-green_dot_10px_10px.png" align="middle" >
 </div>
 
 <div id="id-chat-contact-title-user_presence_idle-text" style="display:none;">
-    {% trans "(Idle)" %}
+    <img src="/{{ live_static_dir }}/img/2-yellow_dot_10px_10px.png" align="middle" > {% trans "(Idle)" %}
 </div>
 <div id="id-chat-contact-title-user_presence_idle-image" style="display:none;">
     <img src="/{{ live_static_dir }}/img/2-yellow_dot_10px_10px.png" align="middle" >
 </div>
 
 <div id="id-chat-contact-title-user_presence_away-text" style="display:none;">
-    {% trans "(Away)" %}
+    <img src="/{{ live_static_dir }}/img/3-red_dot_10px_10px.png" align="middle" > {% trans "(Away)" %}
 </div>
         
 <div id="id-chat-contact-title-user_presence_away-image" style="display:none;">
