--- a/rs/templates/user_main_helpers/chat.html
+++ b/rs/templates/user_main_helpers/chat.html
@@ -67,25 +67,25 @@
 </div>
 
 <div id="id-chat-contact-title-user_presence_active-text" style="display:none;">
-    <img src="/{{ live_static_dir }}/img/1-green_dot_10px_10px.png" align="middle" > {% trans "(Active)" %}
+    <span class="cl-1-green_dot">&nbsp;&nbsp;&nbsp;</span> {% trans "(Active)" %}
 </div>
 <div id="id-chat-contact-title-user_presence_active-image" style="display:none;">
-    <img src="/{{ live_static_dir }}/img/1-green_dot_10px_10px.png" align="middle" >
+    <span class="cl-1-green_dot">&nbsp;&nbsp;&nbsp;</span>
 </div>
 
 <div id="id-chat-contact-title-user_presence_idle-text" style="display:none;">
-    <img src="/{{ live_static_dir }}/img/2-yellow_dot_10px_10px.png" align="middle" > {% trans "(Idle)" %}
+    <span class="cl-2-yellow_dot">&nbsp;&nbsp;&nbsp;</span> {% trans "(Idle)" %}
 </div>
 <div id="id-chat-contact-title-user_presence_idle-image" style="display:none;">
-    <img src="/{{ live_static_dir }}/img/2-yellow_dot_10px_10px.png" align="middle" >
+    <span class="cl-2-yellow_dot">&nbsp;&nbsp;&nbsp;</span>
 </div>
 
 <div id="id-chat-contact-title-user_presence_away-text" style="display:none;">
-    <img src="/{{ live_static_dir }}/img/3-red_dot_10px_10px.png" align="middle" > {% trans "(Away)" %}
+    <span class="cl-3-red_dot">&nbsp;&nbsp;&nbsp;</span> {% trans "(Away)" %}
 </div>
         
 <div id="id-chat-contact-title-user_presence_away-image" style="display:none;">
-    <img src="/{{ live_static_dir }}/img/3-red_dot_10px_10px.png" align="middle" >
+    <span class="cl-3-red_dot">&nbsp;&nbsp;&nbsp;</span> 
 </div>
         
 <div id="id-chat-contact-main-box-disactivated-text" style="display:none;">
