--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -36,10 +36,10 @@
 
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/site_common.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/user_main.css">
+    <link rel="stylesheet" href="/{{ live_static_dir }}/css/Menubar_common.css">
 
     {% if proprietary_static_dir_exists %}
         <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/proprietary_common.css">
-        <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/Menubar_common.css">
 
         {% if build_name == 'Discrete' or build_name == 'Lesbian' or build_name == 'Swinger' or build_name == 'Single' %}
             <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/Discrete_Menubar.css">
