Menubar_common is now menubar_common

--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -36,7 +36,7 @@
 
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/site_common.css">
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/user_main.css">
-    <link rel="stylesheet" href="/{{ live_static_dir }}/css/Menubar_common.css">
+    <link rel="stylesheet" href="/{{ live_static_dir }}/css/menubar_common.css">
 
     {% if proprietary_static_dir_exists %}
         <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/proprietary_common.css">
