--- a/rs/static/css/Menubar_common.css
+++ b/rs/static/css/Menubar_common.css
@@ -27,13 +27,17 @@ way to fit your requirements.
 
 
 /* Default list styling */
+/*#rs-nav li:hover {position:relative; z-index:200;}*/
+#rs-nav .cl-top_item {position: relative; z-index:200;}
 
-#rs-nav li:hover {position:relative; z-index:200;}
-#rs-nav li:hover ul.sub
+/*#rs-nav li:hover ul.sub*/
+#rs-nav li .cl-show_sub
 {left:1px; top:24px; padding:3px; border-width: 0px 2px 2px 2px; border-style: solid; white-space:nowrap; width:180px; height:auto; z-index:300;}
-#rs-nav li:hover ul.sub li
+/*#rs-nav li:hover ul.sub li*/
+#rs-nav li .cl-show_sub li
 {display:block; height:20px; position:relative; float:left; width:180px; font-weight:normal;}
-#rs-nav li:hover ul.sub li a
+/*#rs-nav li:hover ul.sub li a*/
+#rs-nav li .cl-show_sub li a
 {display:block; font-size:13px; height:18px; width:178px; line-height:18px; text-indent:5px; text-decoration:none; }
 
 
@@ -43,7 +47,8 @@ way to fit your requirements.
 #rs-nav li:hover li:hover li:hover li:hover li:hover ul
 {left:180px; top:-4px; padding:3px; white-space:nowrap; width:180px; z-index:400; height:auto;}
 
-#rs-nav ul, 
+
+#rs-nav ul,
 #rs-nav li:hover ul ul,
 #rs-nav li:hover li:hover ul ul,
 #rs-nav li:hover li:hover li:hover ul ul,
