--- a/rs/static/css/Menubar_common.css
+++ b/rs/static/css/Menubar_common.css
@@ -18,6 +18,7 @@ way to fit your requirements.
  */
 
 #rs-nav {padding:0; margin:0; list-style:none; height:24px;  position:relative; z-index:500; font-family:arial, verdana, sans-serif;}
+#rs-nav li {position:relative; z-index:200;}
 #rs-nav li.top {display:block; float:left; height:20px; }
 #rs-nav li.top-right {display:block; float:right; height:20px; }
 #rs-nav li span.no_link {text-decoration:none; font-size:13px; font-weight:bold; line-height:22px; padding:0 24px 0 6px;}
@@ -28,7 +29,7 @@ way to fit your requirements.
 
 /* Default list styling */
 /*#rs-nav li:hover {position:relative; z-index:200;}*/
-#rs-nav .cl-top_item {position: relative; z-index:200;}
+/*#rs-nav .cl-top_item {position: relative; z-index:200;}*/
 
 /*#rs-nav li:hover ul.sub*/
 #rs-nav li .cl-show_sub
@@ -48,6 +49,7 @@ way to fit your requirements.
 {left:180px; top:-4px; padding:3px; white-space:nowrap; width:180px; z-index:400; height:auto;}
 
 
+/* The following rule moves the sub-menus way off the screen (ie. hidden) so that they will not be seen until the parent is clicked.  */
 #rs-nav ul,
 #rs-nav li:hover ul ul,
 #rs-nav li:hover li:hover ul ul,
