--- a/rs/templates/user_main_helpers/menubar.html
+++ b/rs/templates/user_main_helpers/menubar.html
@@ -106,12 +106,13 @@
                 </a>
                 <ul class="sub">
 			        <li>
-                        <a id="id-show_online_status_menu_element" href="#">
+                        <a id="id-show_online_status_menu_element" class ="cl-stay_on_current_page" href="#">
                             {% trans "View others online status" %}
                         </a>
                     </li>
                 </ul>
             </li>
+
 
             <li class="top-right">
                 <a href="{% url views.logout %}"
@@ -132,17 +133,34 @@
 $(document).ready(function() {
 
     $('html').click(function() {
-        //Hide the menus if visible
+        // We have clicked somewhere in the browser outside of one of the dropdown menus. 
+        // Hide any currently open dropdown menus.
          $('.cl-show_sub').removeClass('cl-show_sub');
     });
 
-    $('#rs-nav > li').click(function(event) {
+    $('#rs-nav > li').find("li > a").on('click', function(event) {
+        // if one of the anchor elements in a dropdown is clicked, then do the default action (ie. follow the link).
+        // However, since the click handler on the parent #rs-nav>li element (see below)
+        // has a preventDefault() call, we need to stop propagation to that handler so that the click
+        // doesn't get cancelled by the parent.
+
+        if ($(this).hasClass('cl-stay_on_current_page')) {
+            // if the anchor element shows a popup instead of navigating to a different page, we want to
+            // hide the dropdown menu.
+            $('.cl-show_sub').removeClass('cl-show_sub');
+        }
+        event.stopPropagation()
+    });
+
+    $('#rs-nav > li').on('click', function(event) {
         var is_a_dropdown = ($(this).children('ul.sub').length>0);
         if (is_a_dropdown) {
             var $sub_list = $(this).find('ul.sub');
             if (!$sub_list.hasClass('cl-show_sub')) {
 
-                // remove cl-show_sub from *all* sub-lists so that they will be hidden
+                // remove cl-show_sub from *all* sub-lists to ensure that other sub-menus are closed before
+                // we display the current sub-menu. (the generic handler will not be called since we stop
+                // propagation of this event - see below)
                 $('.cl-show_sub').removeClass('cl-show_sub');
 
                 $sub_list.addClass('cl-show_sub');
@@ -150,9 +168,15 @@ $(document).ready(function() {
                 // by the generic click detector that we use for hiding the dropdown menus when a click occurs
                 // anywhere outside of the menut. 
                 event.stopPropagation();
-                return false;
+            } else {
+                // the list that was clicked on was already displayed - hide it. 
+                $sub_list.removeClass('cl-show_sub');
             }
+
+            // prevent the click from following the link
+            event.preventDefault();
         }
+
     })
 });
     
